--- a/styles/style.css
+++ b/styles/style.css
@@ -139,8 +139,8 @@ body {
 
     .cabecalho__menu {
         justify-content: center;
-        flex-direction: column;
-        gap: 10px;
+        flex-direction: row;
+        gap: 20px;
     }
 
     .apresentacao {
